# fluffy-potato-curriculum

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  compose.yaml  pyproject.toml
.claude/: launch.json  settings.json
.claude/agents/: lesson-roadmap-author.md
.claude/commands/: check.md  lint.md  pr-push-and-merge.md  review-and-update-docs.md  serve-ui.md  typecheck.md
.claude/rules/: notebooks.md  pytest.md  python-style.md
.claude/skills/author-lesson-roadmap/: SKILL.md
.claude/skills/build-lecture-deck/: SKILL.md  build_deck.py
.claude/skills/generate-materials-from-roadmap/: SKILL.md
.claude/skills/review-lesson/: SKILL.md
.claude/skills/sync-lesson-numbering/: SKILL.md
.githooks/: commit-msg  prepare-commit-msg
.github/: pull_request_template.md
.github/workflows/: bump.yml
docs/: CLAUDE.md  classroom-llm-management.md  preview_2day_crash_course.md
docs/handoffs/: 2026-07-03-l12-l13-graph-trace.md  2026-07-03-langchain-notebook-migration.md  2026-07-04-lecture-lab-revoicing.md  2026-07-06-lecture-html-deck-rollout.md
docs/origin/: CLAUDE.md  CURRICULUM_PRD.md  LAB_DESIGN.md  LECTURES.md  PROJECT_BRIEF_DESIGN.md
docs/origin/lesson_roadmaps/K01/: demos_or_activities.md  objectives.md
docs/origin/lesson_roadmaps/K02/: demos_or_activities.md  objectives.md
docs/origin/lesson_roadmaps/K03/: demos_or_activities.md  objectives.md
docs/origin/lesson_roadmaps/K04/: demos_or_activities.md  objectives.md
docs/origin/lesson_roadmaps/K05/: demos_or_activities.md  objectives.md
docs/origin/lesson_roadmaps/K06/: demos_or_activities.md  objectives.md
docs/origin/lesson_roadmaps/L01/: demos_or_activities.md  objectives.md
docs/origin/lesson_roadmaps/L02/: demos_or_activities.md  objectives.md
docs/origin/lesson_roadmaps/L03/: demos_or_activities.md  objectives.md
docs/origin/lesson_roadmaps/L04/: demos_or_activities.md  objectives.md
docs/origin/lesson_roadmaps/L05/: demos_or_activities.md  objectives.md
docs/origin/lesson_roadmaps/L06/: demos_or_activities.md  objectives.md
docs/origin/lesson_roadmaps/L07/: demos_or_activities.md  objectives.md
docs/origin/lesson_roadmaps/L08/: demos_or_activities.md  objectives.md
docs/origin/lesson_roadmaps/L09/: demos_or_activities.md  objectives.md
docs/origin/lesson_roadmaps/L10/: demos_or_activities.md  objectives.md
docs/origin/lesson_roadmaps/L11/: demos_or_activities.md  objectives.md
docs/origin/lesson_roadmaps/L12/: demos_or_activities.md  objectives.md
docs/origin/lesson_roadmaps/L13/: demos_or_activities.md  objectives.md
docs/origin/lesson_roadmaps/L14/: demos_or_activities.md  objectives.md
docs/origin/lesson_roadmaps/L20/: demos_or_activities.md  objectives.md
docs/origin/lesson_roadmaps/L21/: demos_or_activities.md  objectives.md
docs/origin/lesson_roadmaps/L22/: demos_or_activities.md  objectives.md
docs/origin/lesson_roadmaps/L23/: demos_or_activities.md  objectives.md
docs/origin/lesson_roadmaps/L50/: demos_or_activities.md  objectives.md
docs/origin/projects/: agent-shape-demonstrators.md
docs/todos/: 2026-06-09-prd-curriculum.md  2026-07-01-l21-skill-composition.md  2026-07-01-mini-cut-gotcha-antipattern-demos.md  2026-07-03-2151-l10-roadmap-enhancement-ideas.md  2026-07-03-2151-l11-create-agent-mapping-and-l10-graph-reframe.md  2026-07-03-2152-prefer-async-methods.md  2026-07-03-2211-k-prework-track.md  2026-07-03-2303-l12-l13-instrument-l10-graph-trace.md  2026-07-03-2306-l13-regenerate-materials.md  2026-07-03-2335-l13-regenerate-remaining-7-files.md  2026-07-03-l10-react-graph-numbering-reconcile.md  2026-07-03-langchain-notebook-migration.md  2026-07-03-single-example-demos-expand-to-three.md  2026-07-04-1531-gotcha-beat-materials-audit.md  2026-07-04-1716-roadmap-tool-use-prose-drift.md  2026-07-04-broken-toc-anchors.md  2026-07-05-1538-lecture-html-decks.md  2026-07-06-1408-diagram-review-l01-l07.md  2026-07-06-1439-diagram-review-l08-l11.md  2026-07-06-1853-diagram-review-remaining-outlines.md  2026-07-06-2053-gotcha-coda-deck-sync.md
scripts/: serve_ui.sh
src/fluffy_potato_curriculum/: __init__.py
src/fluffy_potato_curriculum/common/: CLAUDE.md  __init__.py  agent_graph.py  agent_loop.py  config.py  evals.py  fake_model.py  tools.py  tracing.py
src/fluffy_potato_curriculum/lessons/: CLAUDE.md  FULL_WRAPUP.md  INVENTORY.md  MINI_WRAPUP.md  SYLLABUS.md  tracks.toml
src/fluffy_potato_curriculum/lessons/K01/: K0101_guide.md
src/fluffy_potato_curriculum/lessons/K02/: K0201_guide.md
src/fluffy_potato_curriculum/lessons/K03/: K0301_guide.md  K0302_demo.ipynb
src/fluffy_potato_curriculum/lessons/K04/: K0401_guide.md
src/fluffy_potato_curriculum/lessons/K05/: K0501_guide.md  K0502_demo.ipynb
src/fluffy_potato_curriculum/lessons/K06/: K0601_guide.md
src/fluffy_potato_curriculum/lessons/L00/: L0001_lecture.md  (+1 more)
src/fluffy_potato_curriculum/local_ui/: CLAUDE.md  __init__.py  __main__.py  app.py  catalog.py  models.py  render.py
src/fluffy_potato_curriculum/potato_llm/: CLAUDE.md  __init__.py  anthropic_client.py  base.py  openai_client.py
src/fluffy_potato_curriculum/projects/: CLAUDE.md
tests/: test_smoke.py
tests/common/: test_agent_graph.py  test_agent_loop.py  test_config.py  test_evals.py  test_fake_model.py  test_tools.py  test_tracing.py
tests/lessons/: test_toc_anchors.py
tests/lessons/L50/: test_receipt_tools.py
tests/local_ui/: _api.py  conftest.py  test_app.py  test_catalog.py  test_render.py
tests/potato_llm/: test_anthropic_client.py  test_base.py  test_openai_client.py
(+309 files in other folders)
