[project]
name = "fluffy-potato-curriculum"
version = "0.15.0"
description = "Python curriculum: code + materials"
readme = "README.md"
authors = [
    { name = "tim.lee", email = "tim.david.lee@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "anthropic[mcp]>=0.105.2",
    "claude-agent-sdk>=0.2.94",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.4",
    "langchain-mcp-adapters>=0.2.2",
    "langfuse>=4.7.1",
    "langgraph>=1.2.4",
    "markdown>=3.10.2",
    "mcp>=1.27.2",
    "openai>=2.38.0",
    "openai-agents>=0.17.4",
    "pydantic-settings>=2.14.1",
    "pygments>=2.20.0",
    "tiktoken>=0.13.0",
    "torch>=2.12.1",
    "transformers>=5.13.0",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "commitizen>=4.16.3",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "nbconvert>=7.17.1",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.12",
    "types-markdown>=3.10.2.20260518",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "SIM"]
# _empty lab notebooks are intentionally incomplete: imports, loop vars, and locals
# are left unused where the student fills in the gap. The matching _solutions notebook
# is held to the full rule set.
"**/*_lab_empty.ipynb" = ["F401", "F841", "B007"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
# The async-seam tests are plain `async def test_*` with no per-test marker;
# pytest-asyncio's auto mode collects them, preserving the marker-free style the
# rest of the suite keeps under --strict-markers.
asyncio_mode = "auto"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.15.0"
version_files = ["pyproject.toml:^version"]
tag_format = "v$version"
# Create annotated (not lightweight) tags so CI's `git push --follow-tags`
# actually ships them — lightweight tags are silently skipped by --follow-tags.
annotated_tag = true
update_changelog_on_bump = true
major_version_zero = true
